# tetriz

./: .gitignore  CMakeLists.txt  color.h  define.h
control/inc/: control.h
control/src/: control.cpp
draw/inc/: draw.h
draw/src/: draw.cpp
field/inc/: field.h
field/src/: field.cpp
game/inc/: game.h
game/src/: game.cpp
map/: Z_span.map  tetriz.xlsx
piece/inc/: piece.h
piece/src/: piece.cpp
src/: main.cpp
terminal/inc/: terminal.h
terminal/src/: terminal.cpp
tetromino/inc/: tetromino.h
tetromino/src/: tetromino.cpp
utils/inc/: utils.h
utils/src/: utils.cpp
window/inc/: window.h
window/src/: window.cpp
